--- a/module/Album/view/album/album/add.phtml
+++ b/module/Album/view/album/album/add.phtml
@@ -11,9 +11,9 @@ $album = $form->get('title');
 $album->setAttribute('class', 'form-control');
 $album->setAttribute('placeholder', 'Album title');
 
-$artist = $form->get('artist');
-$artist->setAttribute('class', 'form-control');
-$artist->setAttribute('placeholder', 'Artist');
+$body = $form->get('body');
+$body->setAttribute('class', 'form-control');
+$body->setAttribute('placeholder', 'Artist');
 
 $submit = $form->get('submit');
 $submit->setAttribute('class', 'btn btn-primary');
@@ -31,9 +31,9 @@ echo $this->form()->openTag($form);
 </div>
 
 <div class="form-group">
-    <?= $this->formLabel($artist) ?>
-    <?= $this->formElement($artist) ?>
-    <?= $this->formElementErrors()->render($artist, ['class' => 'help-block']) ?>
+    <?= $this->formLabel($body) ?>
+    <?= $this->formElement($body) ?>
+    <?= $this->formElementErrors()->render($body, ['class' => 'help-block']) ?>
 </div>
 
 <?php
